New rule: Named pipe inventory for high-authority processes

--- a/src/Properties/launchSettings.json
+++ b/src/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "WTBM": {
       "commandName": "Project",
-      "commandLineArgs": "process --named-pipes"
+      "commandLineArgs": "process --rule PTTBM.PRIV.002"
     }
   }
 }
